--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Population-10/">https://baay22.github.io/Population-10/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Population-10/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Population-10/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Population-10/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Population-10/index.html</a><br>
+                <a target="_bLank" href="https://lucky-pixie-f2b11b.netlify.app">https://lucky-pixie-f2b11b.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
